Correção texto html

--- a/theTeam.html
+++ b/theTeam.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
+		<title>Salão</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="aboutUs.html">Sobre nos</a></li>
+											<li><a href="aboutUs.html">Sobre nós</a></li>
 											<li><a href="theTeam.html">Equipe</a></li>
 											<li><a href="agenda.html">Agenda</a></li>
 										</ul>
@@ -43,7 +43,7 @@
 							<h2>Nossa Equipe</h2>
 							<p>Um breve resumo</p>
 							<ul class="actions special">
-								<li><a href="#two" class="button primary">Marcar horario</a></li>
+								<li><a href="#two" class="button primary">Marcar horário</a></li>
 							</ul>
 						</div>
                     </div>  
@@ -79,8 +79,8 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/adam-winger1.jpg" alt="" /></div><div class="content">
-								<h2>Horarios</h2>
-								<p>Segunda a Sexta 09:00 as 19:00</p>
+								<h2>Horários</h2>
+								<p>Segunda a Sexta 09:00 às 19:00</p>
 								<p><a class="button fit" href="agenda.html">Agendamento</a></p>
 							</div>
 						</section>
@@ -88,7 +88,7 @@
 							<div class="image"><img src="images/adam-winger.jpg" alt="" /></div><div class="content">
 								<h2>Sobre o Salão</h2>
 								<p>Um breve resummo</p>
-								<p><a class="button fit" href="/aboutUs.html">Nossa Historia</a></p>
+								<p><a class="button fit" href="/aboutUs.html">Nossa História</a></p>
 							</div>
 						</section>
                     </section>
