--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
+		<title>Salão</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="aboutUs.html">Sobre nos</a></li>
+											<li><a href="aboutUs.html">Sobre nós</a></li>
 											<li><a href="theTeam.html">Equipe</a></li>
 											<li><a href="agenda.html">Agenda</a></li>
 										</ul>
@@ -64,8 +64,8 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/adam-winger1.jpg" alt="" /></div><div class="content">
-								<h2>Horarios</h2>
-								<p>Segunda a Sexta 09:00 as 19:00</p>
+								<h2>Horários</h2>
+								<p>Segunda a Sexta 09:00 às 19:00</p>
 								<p><a class="button fit" href="agenda.html">Agendamento</a></p>
 							</div>
 						</section>
