--- a/agenda.html
+++ b/agenda.html
@@ -26,7 +26,7 @@
                                 <div id="menu">
                                     <ul>
                                         <li><a href="index.html">Inicio</a></li>
-                                        <li><a href="aboutUs.html">Sobre nos</a></li>
+                                        <li><a href="aboutUs.html">Sobre nós</a></li>
                                         <li><a href="theTeam.html">Equipe</a></li>
                                         <li><a href="agenda.html">Agenda</a></li>
                                         <!-- <li><a href="#">Sign Up</a></li>
@@ -44,7 +44,7 @@
                         <h2>Salão</h2>
                         <p>Mais um bom responsivo</p>
                     </div>
-                    <a href="#one" class="more scrolly">Formulario</a>
+                    <a href="#one" class="more scrolly">Formulário</a>
                 </section>
 
             <!-- One -->    
@@ -54,7 +54,7 @@
                             <header class="major">
                                 <h2>Entre em Contato</h2>
                             </header>
-                            <p>Use o formulario abaixo para marcar um horario, responeremos o mais rapido possivel</p>
+                            <p>Use o formulário abaixo para marcar um horário, responeremos o mais rápido possível</p>
                          
                         </div>
                         <section>
@@ -67,12 +67,12 @@
                                         <input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
                                     </div>
                                     <div class="col-12">
-                                        <textarea name="demo-message" id="demo-message" placeholder="Formulario de contato desativado no momento." rows="6"></textarea>
+                                        <textarea name="demo-message" id="demo-message" placeholder="Formulário de contato desativado no momento." rows="6"></textarea>
                                     </div>
                                     <div class="col-12">
                                         <ul class="actions">
-                                            <li><input disabled="" type="submit" value="Send Message" class="primary"></li>
-                                            <li><input disabled="" type="reset" value="Reset"></li>
+                                            <li><input disabled="" type="submit" value="Enviar" class="primary"></li>
+                                            <li><input disabled="" type="reset" value="Limpar"></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -84,8 +84,8 @@
                     <section class="spotlight">
                         <div class="image"><img src="images/adam-winger.jpg" alt="" /></div><div class="content">
                             <h2>Sobre o Salão</h2>
-                            <p>Um breve resummo</p>
-                            <p><a class="button fit" href="/aboutUs.html">Nossa Historia</a></p>
+                            <p>Um breve resumo</p>
+                            <p><a class="button fit" href="/aboutUs.html">Nossa História</a></p>
                         </div>
                     </section>
                     <section class="spotlight">
