--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Salão</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Inicio</a></li>
-											<li><a href="aboutUs.html">Sobre nos</a></li>
+											<li><a href="aboutUs.html">Sobre nós</a></li>
 											<li><a href="theTeam.html">Equipe</a></li>
 											<li><a href="agenda.html">Agenda</a></li>
 											<!-- <li><a href="#">Sign Up</a></li>
@@ -73,14 +73,14 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/adam-winger.jpg" alt="" /></div><div class="content">
 								<h2>Sobre o Salão</h2>
-								<p>Um breve resummo</p>
-								<p><a class="button fit" href="aboutUs.html">Nossa Historia</a></p>
+								<p>Um breve resumo</p>
+								<p><a class="button fit" href="aboutUs.html">Nossa História</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/adam-winger1.jpg" alt="" /></div><div class="content">
-								<h2>Horarios</h2>
-								<p>Segunda a Sexta 09:00 as 19:00</p>
+								<h2>Horários</h2>
+								<p>Segunda a Sexta 09:00 às 19:00</p>
 								<p><a class="button fit" href="agenda.html">Agendamento</a></p>
 							</div>
 						</section>
@@ -101,7 +101,7 @@
 								<p>Utilizamos produtos da mais alta qualidade de salão em todos os nossos estilos e tratamentos. </p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
+								<li>
 									<h3>Corte e estilo</h3>
 										<ul class="alt">
 											<li>Corte de Cabelo R$:29,99</li>
@@ -109,7 +109,7 @@
 											<li>Penteados R$:49,99</li>
 										</ul>
 								</li>
-								<li class="icon solid fa-laptop">
+								<li>
 									<h3>Coloração</h3>
 										<ul class="alt">
 											<li>Cor básica R$:29,99</li>
@@ -117,22 +117,22 @@
 											<li>Brilho/Tônico R$:49,99</li>
 										</ul>
 								</li>
-								<li class="icon solid fa-code">
+								<li>
 									<h3>Tratamentos e Processos</h3>
 										<ul class="alt">
 											<li>Tratamentos capilares R$:29,99</li>
 											<li>Progressiva<br /> R$:9,99</li>
 										</ul>
 								</li>
-								<li class="icon fa-heart">
+								<li>
 									<h3>Ocasiões especiais</h3>
 									<p>Preços para casamentos e outros eventos especiais estão disponíveis mediante consulta privada.</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
+								<li>
 									<h3>Correção de cor</h3>
 									<p>Preços determinados individualmente após consulta.</p>
 								</li>
-								<li class="icon fa-flag">
+								<li>
 									<h3>Depilação</h3>
 									<p>Cera quente, Roll-on, Fotodepilação Luz Pulsada, Cera fria e Depilação egípcia.</p>
 								</li>
