adicionando feed instagram

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/adam-winger1.jpg" alt="" /></div><div class="content">
+							<div class="image"><img id="primeira" src="images/adam-winger1.jpg" alt="" /></div><div class="content">
 								<h2>Horários</h2>
 								<p>Segunda a Sexta 09:00 às 19:00</p>
 								<p><a class="button fit" href="agenda.html">Agendamento</a></p>
