--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/adam-winger.jpg" alt="" /></div><div class="content">
-								<h2>Sobre o Salão</h2>
-								<p>Um breve resumo</p>
+							<div class="image"><img id="primeira" src="images/adam-winger.jpg" alt="" /></div><div class="content">
+								<h2 id="primeirah2">Sobre o Salão</h2>
+								<p id="primeirap">Um breve resumo</p>
 								<p><a class="button fit" href="aboutUs.html">Nossa História</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img id="primeira" src="images/adam-winger1.jpg" alt="" /></div><div class="content">
+							<div class="image"><img id="segunda" src="images/adam-winger1.jpg" alt="" /></div><div class="content">
 								<h2>Horários</h2>
 								<p>Segunda a Sexta 09:00 às 19:00</p>
 								<p><a class="button fit" href="agenda.html">Agendamento</a></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/adam-winger2.jpg" alt="" /></div><div class="content">
+							<div class="image"><img id="terceira" src="images/adam-winger2.jpg" alt="" /></div><div class="content">
 								<h2>Nossa Equipe</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 								<p><a class="button fit" href="theTeam.html">Encontre-nos</a></p>
